added a login and a user view, they dont do anything yet they are  just the skeleton of what they will be